@@ -1,3 +1,6 @@
+2013-02-28 Graeme Gott <graeme@gottcode.org>
+	* FIXED: Piece edges were blurry.
+
 2012-12-24 Graeme Gott <graeme@gottcode.org>
 	* Add support for compiling with Qt 5.0.0.
 
